app/assets/stylesheets/news.scss
// ========= News Feed User ==========
.title {
  text-align: center;
  color: #686869;
  border-top: 3px dashed #0ABAB6;
  border-bottom: 3px dashed #0ABAB6;
  margin: 1rem 2rem 2rem;
  font-family: 'Quicksand', sans-serif;
  font-size: 2.5rem;
 }

.news-feed-wrap {
  display: flex;
  justify-content: center;
}

.half {
  width: 50%;
  margin: 10px auto;
  display: inline-flex;
}

.articles a {
  color: #0ABAB6;
}

.articles li {
  color: #686869;
  list-style: none;
  padding: 1rem;
  margin: .3rem;
  border: 1px solid #AAAAAA;
  border-radius: 5px;
  background-color: #FFF;
}

.title-news-feed {
  font-size: 1.5rem;
  font-family: 'Quicksand', sans-serif;
}

.title-news-feed button {
  display: flex;
}

.title-button-wrap {
  display: inline;
  margin: 1rem;
}

.title-button-wrap a {
  color: #FFF;
}

.author {
  font-size: 1rem;
}

.img-news-post {
  height: 200px;
  width: 200px;
}

.img-text-news-wrap {
  display: flex
}

.img-news-wrap {
  display: inline-block;
}

.text-news-wrap {
  display: inline-block;
  width: 60%;
  margin-left: 1rem;
}

// ============= Show post =============

.text-news-p {
  color: #686869;
  padding: 1rem 4rem;
  text-align: justify;
}

.img-wrap {
  display: flex;
  justify-content: center;
  margin-bottom: 2rem;
}

.post-img {
  height: 17rem;
  width: 32rem;
  object-fit: cover;
  border-radius: 15px;
}

.pagination {
  display: flex;
  justify-content: center !important;
}

.page-item.active .page-link {
    z-index: 1;
    color: #fff;
    background-color: #0ABAB6;
    border-color: #0ABAB6;
}

.page-link {
  color: #0ABAB6;
}

.delete {
  float: right;
  margin-top: .7rem;
  margin-right: 2rem;
}
// ========== search for charity ============

.search-bar {
  border-radius: 25px;
  width: 55%;
  margin: auto;
}

.button-wrap-wrap {
  padding: 0;
  margin: 1rem;
}

.button-wrap {
  text-align: center;
}

.category-button {
  display: inline;
  padding: .5rem;
  color: #686869;
  list-style: none;
}

.category-button button {
  border-radius: 10px;
  margin: 1rem 0;
}

.ul-charity {
  margin-left: 3rem;
}

.charity-name, .charity-name a  {
  color: #686869;
  font-size: 1.2rem;
  margin-top: .5rem;
  list-style: none;
}

.charity-name:hover, .charity-name a:hover {
  color: #0ABAB6;
  text-decoration: none;
}

.img-search-wrap {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.img-search {
  height: 50%;
  width: 50%;
  margin: auto;
  margin-bottom: 1rem;
  border-radius: 20px;
}

.search-pagination {
  display: flex;
  justify-content: center;
}

.pagination-wrap {
  display: inline;
}

.number-pgs {
  text-align: center;
}
// ========= Mobile News Post ==========

@media all and (max-width: 1154px) {
  .text-news-wrap {
    display: inline-block;
    align-content: center;
    width: 40%;
    margin: 1rem;
    text-align: justify;
  }

  .half {
    width: 100%;
    display: block;
  }
}

@media all and (max-width: 800px) {
  .text-news-wrap {
    display: inline-block;
    width: 80%;
    margin: 1rem;
    text-align: justify;
  }

  .charity-name, .charity-name a  {
    color: #686869;
    font-size: .9rem;
    margin-top: .4rem;
  }

  .img-search-wrap {
    display: block;
    justify-content: center;
    align-items: center;
    margin: auto;
  }

  .img-search {
    margin-left: 5rem;
  }
}

@media all and (max-width: 520px) {
  .img-news-post {
    height: 150px;
    width: 230px;
    margin: auto;
  }

  .post-img {
    height: 12rem;
    width: 24rem;
    object-fit: cover;
    border-radius: 15px;
  }
}

// ========= TWITTER ==========
//https://bountify.co/twitter-tweet-in-boothstrap-3

.twitter-feed {
  display: flex;
}

.row {
  background-color: white;
}

.strip{
  padding: 10px;
  border-top: 1px solid silver;
  border-top: 1px solid silver;
  width: 600px;
}

.strip img{
  float: left;
  margin-right: 10px;
  margin-top: 5px;
}

#logo{
  float: right;
  margin-right: 30px;
  margin-top: 0px;
}

.light{
  color: silver;
}

.summary{
  margin-bottom: 20px;
}

.buttons{
  float: right;
}

.buttons a{
  color: silver;
}

.buttons a:hover{
  color: #428bca;
  text-decoration: none;
}

.buttons i.fa{
  margin-left: .5em;
}

